# PyEventEngine

./: .buildinfo  .gitignore  FALLBACK_ENGINE_SUMMARY.md  Makefile  README.md  api_reference.html  build.ps1  build.sh  capi_c.html  capi_cython.html  capi_python.html  examples.html  genindex.html  index.html  installation.html  native_fallback.html  nt_config.json  objects.inv  probe.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  welcome.html
.github/workflows/: build-page-docs.yml  docs.yml  publish-to-pypi.yml
Demo/: performance.py  test.py
EventEngine/: __init__.py
EventEngine/Core/: _Event.py  _Topic.py  _Topic_c.py  __init__.py
EventEngine/cpp/: topic_api.cpp
_modules/: event_engine.html  index.html
_sources/: api_reference.rst.txt  capi_cython.rst.txt  installation.rst.txt  welcome.rst.txt
_static/: documentation_options.js
demo/: capi_engine_test.py  capi_hook_test.py  capi_performance_test.py  capi_performance_test_debug.py  capi_topic_test.py  native_performance_test.py  performance.py  py_benchmark.py  test.py  test_fallback_engine.py  test_fallback_mechanism.py  test_native_engine.py  test_native_event.py  test_native_topic.py
docs/: DEPLOY_GUIDE.md  api_reference.rst  capi_c.rst  capi_cython.rst  capi_python.rst  conf.py  examples.rst  index.rst  installation.rst  native_fallback.rst
event_engine/: __infra__.pxd  __init__.py
event_engine/base/: __infra__.pxd  c_allocator_protocol.h  c_allocator_protocol.pxd  (+9 more)
test/: capi_engine_test.py  capi_topic_test.py
tests/: capi_hook_test.py  nt_main.py
(+28 files in other folders)
